removed opening main links in new tab

--- a/index.html
+++ b/index.html
@@ -41,8 +41,8 @@
       </figure>
       <div class="header-divider"></div>
       <nav>
-        <a href="faq/index.html" target="_blank">FAQ</a>
-        <a href="about/index.html" target="_blank">About</a>
+        <a href="faq/index.html">FAQ</a>
+        <a href="about/index.html">About</a>
       </nav>
     </div>
   </header>
@@ -137,20 +137,20 @@
           <div class="social-content">
             <div class="social-icons">
               <p><a href="https://www.facebook.com" target="_blank">
-                <i class="fab fa-facebook-f
+                  <i class="fab fa-facebook-f
                 "></i>
-              </a></p>
+                </a></p>
             </div>
             <div class="social-icons">
               <p><a href="https://twitter.com/" target="_blank">
-                <i class="fab fa-twitter
+                  <i class="fab fa-twitter
                 "></i>
-              </a></p>
+                </a></p>
             </div>
             <div class="social-icons">
               <p><a href="https://www.instagram.com/" target="_blank">
-                <i class="fab fa-instagram"></i>
-              </a></p>
+                  <i class="fab fa-instagram"></i>
+                </a></p>
             </div>
           </div>
 
