--- a/about/index.html
+++ b/about/index.html
@@ -24,6 +24,9 @@
   <!-- FONTS -->
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,700|Poppins:500,700" rel="stylesheet">
 
+  <!-- icon fonts -->
+  <script src="https://kit.fontawesome.com/8d4052a3da.js" crossorigin="anonymous"></script>
+
   <meta name="theme-color" content="#fafafa">
 </head>
 
@@ -37,8 +40,8 @@
       </a>
       <div class="header-divider"></div>
       <nav>
-        <a href="faq/index.html" target="_blank">FAQ</a>
-        <a href="about/index.html" target="_blank">About</a>
+        <a href="../faq/index.html">FAQ</a>
+        <a href="index.html">About</a>
       </nav>
     </div>
   </header>
@@ -105,16 +108,23 @@
           <h3>Social</h3>
           <div class="social-content">
             <div class="social-icons">
-              <p><a href="https://www.facebook.com" target="_blank">F</a></p>
+              <p><a href="https://www.facebook.com" target="_blank">
+                  <i class="fab fa-facebook-f
+                "></i>
+                </a></p>
             </div>
             <div class="social-icons">
-              <p><a href="https://www.twitter.com" target="_blank">T</a></p>
+              <p><a href="https://twitter.com/" target="_blank">
+                  <i class="fab fa-twitter
+                "></i>
+                </a></p>
             </div>
             <div class="social-icons">
-              <p><a href="https://www.instigram.com" target="_blank">I</a></p>
+              <p><a href="https://www.instagram.com/" target="_blank">
+                  <i class="fab fa-instagram"></i>
+                </a></p>
             </div>
           </div>
-
         </div>
       </address>
       <div class="copyright">
