validated html and css

--- a/faq/index.html
+++ b/faq/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <title></title>
+  <title>Unplugged</title>
   <meta name="description" content="">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -12,8 +12,6 @@
   <meta property="og:url" content="">
   <meta property="og:image" content="">
 
-  <link rel="manifest" href="site.webmanifest">
-  <link rel="apple-touch-icon" href="icon.png">
   <!-- Place favicon.ico in the root directory -->
 
   <link rel="stylesheet" href="../css/normalize.css">
@@ -77,13 +75,17 @@
     <div class="content-wrapper">
       <address>
         <div class="footer-contact">
-          <h3>Contact</h3>
+          <div class="footer-title">
+            <strong>Contact</strong>
+          </div>
           <p>555-555-5555</p>
           <a href="hello@unplugged.com">hello@unplugged.com</a>
         </div>
 
         <div class="social">
-          <h3>Social</h3>
+          <div class="footer-title">
+            <strong>Social</strong>
+          </div>
           <div class="social-content">
             <div class="social-icons">
               <p><a href="https://www.facebook.com" target="_blank">
