--- a/about/index.html
+++ b/about/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <title></title>
+  <title>Unplugged</title>
   <meta name="description" content="">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -12,8 +12,6 @@
   <meta property="og:url" content="">
   <meta property="og:image" content="">
 
-  <link rel="manifest" href="site.webmanifest">
-  <link rel="apple-touch-icon" href="icon.png">
   <!-- Place favicon.ico in the root directory -->
 
   <!-- CSS -->
@@ -22,7 +20,7 @@
   <link rel="stylesheet" href="../css/about/styles.css">
 
   <!-- FONTS -->
-  <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,700|Poppins:500,700" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,700" rel="stylesheet">
 
   <!-- icon fonts -->
   <script src="https://kit.fontawesome.com/8d4052a3da.js" crossorigin="anonymous"></script>
@@ -65,14 +63,15 @@
       </div>
     </section>
     <!-- map -->
-    <section class="map">
+
+    <div class="map">
       <figure>
         <iframe
           src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d209.59112543803528!2d-97.42698444326858!3d32.806627537334705!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x864e74da72e9c553%3A0x7f8a7c4a0966d307!2sBest%20Buy!5e0!3m2!1sen!2sus!4v1637700006483!5m2!1sen!2sus"
           width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy">
         </iframe>
       </figure>
-    </section>
+    </div>
     <!-- contact -->
     <section class="contact">
       <div class="content-wrapper">
@@ -80,13 +79,17 @@
         <address>
           <div>
             <!-- <h3>General Information</h3> -->
-            <h2>General Information</h2>
+            <div class="contact-title">
+              <strong>General Information</strong>
+            </div>
             <p>333 Main St. Lake Geneva, WI 53147</p>
             <p>555-555-5555</p>
             <p>hello@unplugged.com</p>
           </div>
           <div>
-            <h2>Chat with a Facilitator</h2>
+            <div class="contact-title">
+              <strong>Chat with a Facilitator</strong>
+            </div>
             <p>555-555-5555</p>
             <p>facilitator@unplugged.com</p>
           </div>
@@ -99,13 +102,17 @@
     <div class="content-wrapper">
       <address>
         <div class="footer-contact">
-          <h3>Contact</h3>
+          <div class="footer-title">
+            <strong>Contact</strong>
+          </div>
           <p>555-555-5555</p>
           <a href="hello@unplugged.com">hello@unplugged.com</a>
         </div>
 
         <div class="social">
-          <h3>Social</h3>
+          <div class="footer-title">
+            <strong>Social</strong>
+          </div>
           <div class="social-content">
             <div class="social-icons">
               <p><a href="https://www.facebook.com" target="_blank">
