--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <title></title>
+  <title>Unplugged</title>
   <meta name="description" content="">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -12,7 +12,6 @@
   <meta property="og:url" content="">
   <meta property="og:image" content="">
 
-  <link rel="manifest" href="site.webmanifest">
   <link rel="apple-touch-icon" href="icon.png">
   <!-- Place favicon.ico in the root directory -->
 
@@ -21,7 +20,7 @@
   <link rel="stylesheet" href="css/main.css">
 
   <!-- FONTS -->
-  <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,700|Poppins:500,700" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,700" rel="stylesheet">
 
   <!-- icon fonts -->
   <script src="https://kit.fontawesome.com/8d4052a3da.js" crossorigin="anonymous"></script>
@@ -63,7 +62,7 @@
       </div>
       <div class="form">
         <h3>Find out more</h3>
-        <form action="">
+        <form>
           <input type="text" name="name" value="email address">
           <input type="button" value="Download Itinerary">
         </form>
@@ -74,35 +73,35 @@
       <div class="content-wrapper">
         <h1>Have the work week you always dreamed of - without the bad wifi.</h1>
         <div class="features-items">
-          <article>
+          <div>
             <p class="fontawesome-icon"><i class="fas fa-campground"></i></p>
             <p class="features-item-description">Located in a peaceful bungalow outside of Lake Geneva, Wisconsin.</p>
-          </article>
-          <article>
+          </div>
+          <div>
             <p class="fontawesome-icon"><i class="fas fa-bed"></i></p>
             <p class="features-item-description">12 private rooms with ensuite bathrooms, 2 group meeting rooms, and 4
               breakout
               rooms.</p>
-          </article>
-          <article>
+          </div>
+          <div>
             <p class="fontawesome-icon"><i class="fas fa-utensils"></i></p>
             <p class="features-item-description">Private chef team providing on demand meals - just like your team
               kitchen.</p>
-          </article>
-          <article>
+          </div>
+          <div>
             <p class="fontawesome-icon"><i class="fas fa-shoe-prints"></i></p>
             <p class="features-item-description">5 outdoor obstaclee courses, including private beach 1/2 mile from
               bungalow.</p>
-          </article>
-          <article>
+          </div>
+          <div>
             <p class="fontawesome-icon"><i class="fas fa-smile"></i></p>
             <p class="features-item-description">Retreat facilitator to manage your day to day activities so you all
               get a chance to reset.</p>
-          </article>
-          <article>
+          </div>
+          <div>
             <p class="fontawesome-icon"><i class="fas fa-wifi"></i></p>
             <p class="features-item-description">Dedicated computer room for times that you must wifi.</p>
-          </article>
+          </div>
         </div>
       </div>
     </section>
@@ -110,7 +109,7 @@
     <section class="reviews">
       <div class="content-wrapper">
         <h1>Be a better team in 5 days, like these.</h1>
-        <article>
+        <div>
           <div class="imgs"></div>
           <div class="reviews-content">
             <h2>LaCrue Bottling Co.</h2>
@@ -118,7 +117,7 @@
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec ut nisi dapibus, sollicitudin nunc ut,
               mattis sapien. Nam et tincidunt tortor, ac lobortis turpis. Nulla quis purus vel mauris luctus.</p>
           </div>
-        </article>
+        </div>
       </div>
     </section>
   </main>
@@ -127,13 +126,17 @@
     <div class="content-wrapper">
       <address>
         <div class="footer-contact">
-          <h3>Contact</h3>
+          <div class="footer-title">
+            <strong>Contact</strong>
+          </div>
           <p>555-555-5555</p>
           <a href="hello@unplugged.com">hello@unplugged.com</a>
         </div>
 
         <div class="social">
-          <h3>Social</h3>
+          <div class="footer-title">
+            <strong>Social</strong>
+          </div>
           <div class="social-content">
             <div class="social-icons">
               <p><a href="https://www.facebook.com" target="_blank">
